--- a/app/_components/home/Hero/_Hero.module.scss
+++ b/app/_components/home/Hero/_Hero.module.scss
@@ -294,7 +294,7 @@
     }
   }
   .sub {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     line-height: 1.3;
   }
   .statusLine {
@@ -377,7 +377,7 @@
     padding-top: 18px;
   }
   .sub {
-    font-size: 1.35rem;
+    font-size: 1.45rem;
     line-height: 1.3;
     max-width: 100%;
   }
