--- a/app/_components/home/Intro/_Intro.module.scss
+++ b/app/_components/home/Intro/_Intro.module.scss
@@ -46,17 +46,6 @@
   color: var(--accent);
 }
 
-@media (max-width: 900px) {
-  .body {
-    font-size: 1.7rem;
-    line-height: 1.3;
-
-    p {
-      margin-bottom: 1.4em;
-    }
-  }
-}
-
 @media (max-width: 768px) {
   .grid {
     grid-template-columns: 1fr;
@@ -68,12 +57,12 @@
 
 @media (max-width: 640px) {
   .body {
-    font-size: 1.45rem;
+    font-size: 1.55rem;
     line-height: 1.3;
 
     p {
       max-width: 100%;
-      margin-bottom: 1.3em;
+      margin-bottom: 1.4em;
     }
   }
   .label {
