--- a/app/_components/home/SelectedClients/_SelectedClients.module.scss
+++ b/app/_components/home/SelectedClients/_SelectedClients.module.scss
@@ -90,10 +90,6 @@
   .client:nth-child(n + 3) {
     border-top: 1px solid var(--rule);
   }
-  .intro {
-    font-size: 1.5rem;
-    line-height: 1.3;
-  }
 }
 
 @media (max-width: 640px) {
@@ -109,7 +105,8 @@
     font-size: 0.9rem;
   }
   .intro {
-    font-size: 1.4rem;
+    font-size: 1.45rem;
+    line-height: 1.3;
     margin-bottom: 24px;
   }
 }
